--- a/lang.html
+++ b/lang.html
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="lang.css" />
   </head>
   <body>
-    <br />
-    <br />
-    <div id="terminalContent"></div>
-    <div id="terminal"></div>
-    <div id="cursor"></div>
-    <input type="text" id="input" />
-    <div id="debug"></div>
-    <script src="index.js"></script>
+    <div id="app"></div>
+    <script src="interpreter.js"></script>
   </body>
 </html>
